--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <th><h4  style="color: white;">DAYS</h4></th>
-                    <th><h4  style="color: white;">HOURS</h4></th>
+                    <th><h4  style="color:rgb(236, 233, 19);">DAYS</h4></th>
+                    <th><h4  style="color:rgb(196, 196, 202)">HOURS</h4></th>
                     <th><h4  style="color: white;">MINUTES</h4></th>
-                    <th><h4  style="color: white">SECONDS</h4></th>
+                    <th><h4  style="color:rgb(241, 20, 20);">SECONDS</h4></th>
                   </tr>
                   </tbody>
                   </table>
