--- a/index.html
+++ b/index.html
@@ -282,9 +282,9 @@
               <div class="col-md-6 mb-4" style="padding-top: 60px;">
                 <h1 style="text-align: center;">PUBLICATION</h1>
                 <!-- Main heading -->
-                <p>
+<!--                 <p>
                     Proceedings of 2st ICAIHC 2021 will be published by Lecture notes on Computer Application (LNCA) series of Springer. 
-                </p>
+                </p> --><h4 style="text-align: center;">coming soon...</h4> 
 
                 <div class="row" >
                     <div class="col-md-4">
@@ -349,7 +349,7 @@
         <div  style="width: 500px; height:300px;background-color: orange;">
         <h3 style="text-align: center;padding-top: 50px;"><b>IMPORTANT DATES</b></h3>
         <h6 style="text-align: center;padding-top: 50px;"><b>Paper Submission Date: <b>01-09-21</b> <br>
-            Acceptance Notification: <b>10-06-21</b> <br>
+            Acceptance Notification: <b>20-02-22</b> <br>
             Registration: <b>15-03-2022</b></h6>
         </div>
     </div
