--- a/html/committe.html
+++ b/html/committe.html
@@ -531,28 +531,28 @@ h4{
                               <td> Aparna Rawal</td>
                               <td>Bhillai institute of technology, CG India</td>
                             </tr>
-                            <tr>
-                              <td> Ani Thomas</td>
-                              <td></td>
+                             <td> Ani Thomas</td>
+                              <td>Bhillai Institute of Technology, CG India</td>
                             </tr>
                             <tr>
                               <td>Sunita Soni</td>
-                              <td></td>
+                              <td>Bhillai Institute of Technology, CG India</td>
                             </tr>
                             <tr>
                               <td>Kavita </td>
+                              <td>G. Pulla Reddy Engg. College Karnool, AP</td>
                             </tr>
                             <tr>
                               <td>Muskan </td>
+                              <td>Amity University Rajasthan, Jaipur</td>
                             </tr>
                             <tr>
-                              <td>Muskan </td>
-                            </tr>
-                            <tr>
-                              <td>David Martin Corio</td>
+                              <td>David Corrêa Martins Júnior</td>
+                              <td>Universidade Federal do ABC (Federal University of ABC - UFABC)</td>
                             </tr>
                             <tr>
                               <td>Prof. Mohammad Yamin</td>
+                              <td>King Abdulaziz University, Jeddah, Saudi Arabia</td>
                             </tr>
                             </table>
           
