--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 <tbody>
                   <tr>
                     <td>PAPER SUBMISSION START</td>
-                    <td>1TH SEP 2021</td>
+                    <td>1st SEP 2021</td>
                   </tr>
                   <tr>
                     <td>PAPER SUBMISSION END</td>
