--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         src="./image/icon-3-2.png"  class="rounded mx-auto d-block"
       />
       <h4 style="text-align: center;padding-top: 10px;"><b>Contact</b></h4>
-      <p style="text-align: center;">Dr.Sarbeswar Hota: <b>9937462230</b> <br>
+      <p style="text-align: center;">Sarbeswar Hota: <b>9937462230</b> <br>
         
         Debabrata Singh: <b>8658427346</b></p>
     </div>
