--- a/html/contact.html
+++ b/html/contact.html
@@ -147,11 +147,11 @@ position:absolute;
     <p><b> Get in Touch <br>
         ICAIHC@gmail.com <br>
         
-        Dr. Sarbeswar Hotta <br>
+        Sarbeswar Hotta <br>
         Mobile: +91-9937462230 <br>
         E-mail: sarbeswarahota@soa.ac.in<br>
         
-        Dr.Debabrata Singh <br>
+        Debabrata Singh <br>
         Mobile: +91-8658427346<br>
         E-mail:debabratasingh@soa.ac.in <br>
         </p>
