--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-display" viewBox="0 0 16 16">
+
+    <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-display" viewBox="0 0 16 16">
         <path d="M0 4s0-2 2-2h12s2 0 2 2v6s0 2-2 2h-4c0 .667.083 1.167.25 1.5H11a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1h.75c.167-.333.25-.833.25-1.5H2s-2 0-2-2V4zm1.398-.855a.758.758 0 0 0-.254.302A1.46 1.46 0 0 0 1 4.01V10c0 .325.078.502.145.602.07.105.17.188.302.254a1.464 1.464 0 0 0 .538.143L2.01 11H14c.325 0 .502-.078.602-.145a.758.758 0 0 0 .254-.302 1.464 1.464 0 0 0 .143-.538L15 9.99V4c0-.325-.078-.502-.145-.602a.757.757 0 0 0-.302-.254A1.46 1.46 0 0 0 13.99 3H2c-.325 0-.502.078-.602.145z"/>
-      </svg>
+      </svg> -->
 
         <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
@@ -63,7 +64,7 @@
             </a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: rgb(30, 50, 58);"">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <b style="font-size: 15px;">ABOUT</b>
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -72,7 +73,7 @@
             </div>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="./html/speaker.html">SPEAKER</b>
+            <a class="nav-link" href="./html/speaker.html"><b>SPEAKER</b>
               <span class="sr-only">(current)</span>
             </a>
           </li>
@@ -82,7 +83,7 @@
             </a>
           </li>
           <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: rgb(30, 50, 58);">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
                 <b style="font-size: 15px;">SUBMISSION</b>
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -112,6 +113,20 @@
 
     </div>
   </nav>
+
+  <script>
+var navbar = document.querySelector('nav')
+
+window.onscroll = function() {
+
+  // pageYOffset or scrollY
+  if (window.pageYOffset > 0) {
+    navbar.classList.add('scrolled')
+  } else {
+    navbar.classList.remove('scrolled')
+  }
+}
+  </script>
   <!-- Navbar -->
     
       <!-- Full Page Intro -->
@@ -174,10 +189,10 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <th><h4  style="color:rgb(236, 233, 19);">DAYS</h4></th>
-                    <th><h4  style="color:rgb(196, 196, 202)">HOURS</h4></th>
+                    <th><h4  style="color: rgb(236, 233, 19);">DAYS</h4></th>
+                    <th><h4  style="color: rgb(196, 196, 202);">HOURS</h4></th>
                     <th><h4  style="color: white;">MINUTES</h4></th>
-                    <th><h4  style="color:rgb(241, 20, 20);">SECONDS</h4></th>
+                    <th><h4  style="color: rgb(241, 20, 20)">SECONDS</h4></th>
                   </tr>
                   </tbody>
                   </table>
@@ -242,7 +257,7 @@
                 <h1 class="h3 mb-3" style="font-size: 40px;color: blueviolet;"><b>CALL FOR PAPERS</b></h1>
                 <p>All papers must be submitted online via easychair submission portal using the following link</p>
                 <button class="button" style="background-color:rgb(255, 253, 147);border: none;color: white;
-                padding: 15px 32px;" ><a href="#">Submit</a></button>
+                padding: 15px 32px;" ><a href="./html/call_for_papers.html">Submit</a></button>
               </div>
               <!--Grid column-->
               <table class="table table-striped" style="margin-top: 50px;">
@@ -282,9 +297,10 @@
               <div class="col-md-6 mb-4" style="padding-top: 60px;">
                 <h1 style="text-align: center;">PUBLICATION</h1>
                 <!-- Main heading -->
-<!--                 <p>
-                    Proceedings of 2st ICAIHC 2021 will be published by Lecture notes on Computer Application (LNCA) series of Springer. 
-                </p> --><h4 style="text-align: center;">coming soon...</h4> 
+                <p>
+                    <!-- Proceedings of 2st ICAIHC 2021 will be published by Lecture notes on Computer Application (LNCA) series of Springer.  -->
+                     <h4 style="text-align: center;">coming soon...</h4>               
+                  </p>
 
                 <div class="row" >
                     <div class="col-md-4">
