--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="./html/registration.html">REGISTRATION</a>
-                <a class="dropdown-item" href="./html/guidlines.html">GUIDLINES</a>
+                <a class="dropdown-item" href="./html/guidlines.html">GUIDELINES</a>
                 <a class="dropdown-item" href="./html/tracks.html">TRACKS</a>
               </div>
             </li>
