--- a/html/committe.html
+++ b/html/committe.html
@@ -104,7 +104,7 @@ h4{
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <a class="dropdown-item" href="../html/registration.html">REGISTRATION</a>
-                <a class="dropdown-item" href="../html/guidlines.html">GUIDLINES</a>
+                <a class="dropdown-item" href="../html/guidlines.html">GUIDELINES</a>
                 <a class="dropdown-item" href="../html/tracks.html">TRACKS</a>
               </div>
             </li>
