--- a/html/guidlines.html
+++ b/html/guidlines.html
@@ -146,7 +146,7 @@
                 <!-- Tabs nav -->
                 <div class="nav flex-column nav-pills nav-pills-custom" id="v-pills-tab" role="tablist" aria-orientation="vertical">
                     <a class="nav-link mb-3 p-3 shadow active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">
-                        <span class="font-weight-bold small text-uppercase" >Author Guidlines</span></a>
+                        <span class="font-weight-bold small text-uppercase" >Author Guidelines</span></a>
 
                     <a class="nav-link mb-3 p-3 shadow" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">
                         <span class="font-weight-bold small text-uppercase">Submission Details</span></a>
@@ -155,7 +155,7 @@
                         <span class="font-weight-bold small text-uppercase">Manuscript Preparation</span></a>
 
                     <a class="nav-link mb-3 p-3 shadow" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">
-                        <span class="font-weight-bold small text-uppercase">Plagarisim GuidLines</span></a>
+                        <span class="font-weight-bold small text-uppercase">Plagarisim GuideLines</span></a>
                     </div>
             </div>
 
