--- a/html/about_ICAIHC.html
+++ b/html/about_ICAIHC.html
@@ -83,8 +83,7 @@
                   </div>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#" target="_blank"><b>ICAIHC</b>
-                      <span class="sr-only">(current)</span>
+                    <a class="nav-link" href="./ICAIHC.html" target="_blank"><b>ICAIHC</b>
                     </a>
                   </li>
             </ul>
@@ -169,8 +168,8 @@ Intelligent computing, ubiquitous computing, and ambient intelligence are concep
     
         <!--Copyright-->
         <div class="footer-copyright py-3">
-         <p style="color: white;"> © 2021 Copyright:
-          <a href="" target="_blank">  ICAIHC. ALL RIGHTS RESERVED. </a></p>
+         <p style="color: white;"> © 2022 Copyright:
+          ICAIHC. ALL RIGHTS RESERVED. </p>
         </div>
         <!--/.Copyright-->
     
