--- a/html/registration.html
+++ b/html/registration.html
@@ -87,8 +87,7 @@
               </div>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#" target="_blank"><b>ICAIHC</b>
-                  <span class="sr-only">(current)</span>
+                <a class="nav-link" href="./ICAIHC.html" target="_blank"><b>ICAIHC</b>
                 </a>
               </li>
         </ul>
@@ -126,8 +125,8 @@
   <!-- Navbar -->
 
       <div class="d-flex justify-content-center align-items-center  w-100" style="height: 250px;padding-top: 150px;">
-        <div  style="width: 300px; height:80px;background-color: rgb(208, 255, 0);">
-            <h1 style="text-align: center;font-size: 30px;">About S'O'A & ITER</h1>
+        <div  style="width: 300px; height:80px;background-color: rgba(114, 173, 135, 0.178);">
+            <h1 style="text-align: center;font-size: 30px;padding-top: 20px;">Registration</h1>
         </div>
     </div>
 
@@ -230,7 +229,7 @@
                 <td>MICR CODE</td>
                 <td>UPDATED SOON..</td>
               </tr> -->
-              <h4 style="text-align: center;">Coming Soon...............</h4>
+              <h4 style="text-align: center;">Will Be Updated Soon.............</h4>
             </tbody>
           </table>.
       </table>
@@ -271,8 +270,8 @@
     
         <!--Copyright-->
         <div class="footer-copyright py-3">
-         <p style="color: white;"> © 2021 Copyright:
-          <a href="" target="_blank">  ICAIHC. ALL RIGHTS RESERVED. </a></p>
+         <p style="color: white;"> © 2022 Copyright:
+            ICAIHC. ALL RIGHTS RESERVED. </p>
         </div>
         <!--/.Copyright-->
     
