--- a/html/speaker.html
+++ b/html/speaker.html
@@ -91,8 +91,7 @@
               </div>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="" target="_blank"><b>ICAIHC</b>
-                  <span class="sr-only">(current)</span>
+                <a class="nav-link" href="./ICAIHC.html" target="_blank"><b>ICAIHC</b>
                 </a>
               </li>
         </ul>
@@ -131,7 +130,7 @@
 
       <div class="d-flex justify-content-center align-items-center  w-100" style="height: 350px;padding-top: 200px;">
         <div  style="width: 500px; height:80px;background-color: rgba(9, 124, 80, 0.171);">
-            <h1 style="text-align: center;font-size: 40px;">SPEAKERS</h1>
+            <h1 style="text-align: center;font-size: 40px;padding-top: 10px;">SPEAKERS</h1>
         </div>
     </div>
 
@@ -142,7 +141,7 @@
 <a href="../index.html">Home  </a> / speakers</h6>  
   </div>
 
-<h4 style="text-align: center;"> coming soon..............</h4>
+<h4 style="text-align: center;"> Will Be Updated Soon..............</h4>
 
 
 
@@ -178,8 +177,8 @@
         
             <!--Copyright-->
             <div class="footer-copyright py-3">
-             <p style="color: white;"> © 2021 Copyright:
-              <a href="" target="_blank">  ICAIHC. ALL RIGHTS RESERVED. </a></p>
+             <p style="color: white;"> © 2022 Copyright:
+              ICAIHC. ALL RIGHTS RESERVED. </p>
             </div>
             <!--/.Copyright-->
         
