--- a/html/tracks.html
+++ b/html/tracks.html
@@ -91,8 +91,7 @@
               </div>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="" target="_blank"><b>ICAIHC</b>
-                  <span class="sr-only">(current)</span>
+                <a class="nav-link" href="./about_ICAIHC.html" target="_blank"><b>ICAIHC</b>
                 </a>
               </li>
         </ul>
@@ -259,7 +258,7 @@
         
             <!--Copyright-->
             <div class="footer-copyright py-3">
-             <p style="color: white;"> © 2021 Copyright:
+             <p style="color: white;"> © 2022 Copyright:
               <a href="#" target="_blank">  ICAIHC. ALL RIGHTS RESERVED. </a></p>
             </div>
             <!--/.Copyright-->
