--- a/html/committe.html
+++ b/html/committe.html
@@ -414,7 +414,7 @@ h4{
                             </tr>
                             <tr>
                               <td> Prasanta Mohapatra</td>
-                              <td>SUniversity of California, Davis</td>
+                              <td>University of California, Davis</td>
                             </tr>
                             <tr>
                               <td> R.C Bansal</td>
@@ -498,7 +498,7 @@ h4{
                               </tr>
                               <tr>
                                 <td>Chabi Rani Panigrahi</td>
-                                <td>SiR. D.Womens University, BBSR,Odisha, India</td>
+                                <td>R. D.Womens University, BBSR,Odisha, India</td>
                               </tr>
                               <tr>
                                 <td> Bhawani Sankar Sinha</td>
