--- a/html/committe.html
+++ b/html/committe.html
@@ -458,7 +458,7 @@ h4{
                               </tr>
                               <tr>
                                 <td> Tanmoy Kumar Chakrabarty</td>
-                                <td> Tanmoy Kumar Chakrabarty</td>
+                                <td>IIIT Delhi, India</td>
                               </tr>
                               <tr>
                                 <td> Bhawani Sankar Panda</td>
