--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ window.onscroll = function() {
         <!-- Mask & flexbox options-->
         <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
     
-          <!-- Content display text annimation start -->
+          <!-- Content display text annimation startss -->
           <div class="text-center white-text mx-5 wow fadeIn">
             <h1 class="mb-4" style="padding-top: 150px;">
               <strong style="color:yellow;font-size: 80px;" class="ml2"> ICAIHC- 2022</strong>
@@ -176,7 +176,7 @@ window.onscroll = function() {
     <!-- Content display text annimation End -->
 
 
-<!-- Time Display start -->
+<!-- Time Display startss -->
             <table style="width: 50%;">
                 <thead>
                   <tr>
@@ -257,16 +257,19 @@ window.onscroll = function() {
                 <p>All papers must be submitted online via easychair submission portal using the following link</p>
                 <button class="button" style="background-color:rgb(255, 253, 147);border: none;color: white;
                 padding: 15px 32px;" ><a href="https://easychair.org/conferences/?conf=icaihc2022">Submit</a></button>
+
+<button class="button" style="background-color:rgb(147, 242, 255);border: none;color: white;
+padding: 15px 2px;margin-left: 89px;" ><a href="./html/Special.html">SPECIAL SESSION</a></button>
               </div>
               <!--Grid column-->
               <table class="table table-striped" style="margin-top: 50px;">
                 <tbody>
                   <tr>
-                    <td>PAPER SUBMISSION START</td>
+                    <td>PAPER SUBMISSION STARTS</td>
                     <td>1<sup>ST</sup>  SEP 2021</td>
                   </tr>
                   <tr>
-                    <td>PAPER SUBMISSION END</td>
+                    <td>PAPER SUBMISSION ENDS</td>
                     <td>30<sup>TH</sup> NOV 2021</td>
                   </tr>
                   <tr>
@@ -298,8 +301,8 @@ window.onscroll = function() {
                 <!-- Main heading -->
                 <p style="text-align: justify;font-size: 18px;"> Proceedings of ICAIHC-2022 will be published by
                   Smart Innovation, Systems and Technologies(SIST):
-                  Springer Book Series (Approval pending)
-                  Indexing: This series will be submitted for inclusion
+                  Springer Book Series (Approval pending.)<br>
+                  <b>Indexing:</b> This series will be submitted for inclusion
                   to the leading indexing services
                   including ISI Proceedings, EI-Compendex, DBLP,
                   SCOPUS, Google Scholar and Springer link.</p>  
@@ -354,9 +357,9 @@ window.onscroll = function() {
         src="./image/icon-3-2.png"  class="rounded mx-auto d-block"
       />
       <h4 style="text-align: center;padding-top: 10px;"><b>Contact</b></h4>
-<p style="text-align: center;">Dr. Debabrata Singh: <b>8658427346</b> <br>
+      <p style="text-align: center;">Dr. Debabrata Singh: <b>8658427346</b> <br>
         
-         Dr. Sarbeswar Hota: <b>9937462230</b></b></p>
+         Dr. Sarbeswara Hota: <b>9937462230</b></b></p>
     </div>
   </div>
 
