--- a/html/contact.html
+++ b/html/contact.html
@@ -171,7 +171,7 @@ position:absolute;
        
 
         <br><br>
-        Dr. Sarbeswar Hotta <br>
+        Dr. Sarbeswara Hota <br>
         Mobile: +91-9937462230 <br>
         E-mail:<a href="sarbeswarahota@soa.ac.in">sarbeswarahota@soa.ac.in</a><br>
 
