--- a/html/Special.html
+++ b/html/Special.html
@@ -169,7 +169,7 @@
 <p style="font-size: 20px;"><b>Dr. SK Hafizul Islam</b></p>
 <p style="font-size: 20px;">Department of Computer Science and Engineering,<br> 
     Indian Institute of Information Technology Kalyani <br>
-    West Bengal 741235, Indiabr <br>
+    West Bengal 741235, India <br>
    <b>Email:</b> hafi786@gmail.com </p><br><br>
 
    <p style="font-size: 20px;"><b>Dr. Debabrata Samanta</b><br><br>
