--- a/html/committe.html
+++ b/html/committe.html
@@ -524,7 +524,7 @@ h4{
                             </tr>
                             <tr>
                               <td> SK Hafizul Islam</td>
-                              <td>Machine Intelligence Research Labs, USA</td>
+                              <td>Indian Institute of Information Technology, Kalyani</td>
                             </tr>
                             <tr>
                               <td> Shakti Ketan Prusty</td>
