--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@ padding: 15px 2px;margin-left: 89px;" ><a href="./html/Special.html">SPECIAL SES
                 <h1 style="text-align: center;">PUBLICATION</h1>
                 <!-- Main heading -->
                 <p style="text-align: justify;font-size: 18px;"> Proceedings of ICAIHC-2022 will be published by
-                  Smart Innovation, Systems and Technologies(SIST):
-                  Springer Book Series <a href="https://www.springer.com/series/8767">(https://www.springer.com/series/8767)</a><br>
+                  Smart Innovation, Systems and Technologies(SIST): Springer Book Series
+                   <a href="https://www.springer.com/series/8767">(https://www.springer.com/series/8767)</a><br>
                   <b>Indexing:</b> This series will be submitted for inclusion
                   to the leading indexing services
                   including ISI Proceedings, EI-Compendex, DBLP,
