--- a/html/contact.html
+++ b/html/contact.html
@@ -53,7 +53,7 @@ position:absolute;
         <div class="container">
     
           <!-- Brand -->
-          <a class="navbar-brand" href="#"><img src="../image/download.png" alt="Conference  Logo" style="height: 90px; width: 200px;"></a>
+          <a class="navbar-brand" href="#"><img src="../image/Logo_Springer.jpg" alt="Conference  Logo" style="height: 90px; width: 265px;"></a>
     
           <!-- Collapse -->
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
