--- a/index.html
+++ b/index.html
@@ -254,12 +254,17 @@ window.onscroll = function() {
     
                 <!-- Main heading -->
                 <h1 class="h3 mb-3" style="font-size: 40px;color: blueviolet;"><b>CALL FOR PAPERS</b></h1>
-                <p>All papers must be submitted online via easychair submission portal using the following link</p>
-                <button class="button" style="background-color:rgb(255, 253, 147);border: none;color: white;
-                padding: 15px 32px;" ><a href="https://easychair.org/conferences/?conf=icaihc2022">Submit</a></button>
+                <p>All papers must be submitted online via easychair submission portal using the following link : <a href="https://easychair.org/conferences/?conf=icaihc2022">https://easychair.org/conferences/?conf=icaihc2022</a> </p>
+
+                  <h2 style="padding-bottom: 25px;color:blue"><u>Special Highlights</u></h2>
+
+                <!-- <button class="button" style="background-color:rgb(255, 253, 147);border: none;color: white;
+                padding: 15px 32px;" ><a href="./html/Special.html">Special Session</a></button>
 
 <button class="button" style="background-color:rgb(147, 242, 255);border: none;color: white;
-padding: 15px 2px;margin-left: 89px;" ><a href="./html/Special.html">SPECIAL SESSION</a></button>
+padding: 15px 2px;margin-left: 31px;" ><a href="">Young Profetional</a></button> -->
+<button type="button" class="btn btn-primary btn-lg" >Special Session</button>
+<button type="button" class="btn btn-secondary btn-lg" style="background-color: azure;" ><a href="./html/young_profetional.html"> Young Profetional Session</a></button>
               </div>
               <!--Grid column-->
               <table class="table table-striped" style="margin-top: 50px;">
@@ -299,13 +304,15 @@ padding: 15px 2px;margin-left: 89px;" ><a href="./html/Special.html">SPECIAL SES
               <div class="col-md-6 mb-4" style="padding-top: 60px;">
                 <h1 style="text-align: center;">PUBLICATION</h1>
                 <!-- Main heading -->
-                <p style="text-align: justify;font-size: 18px;"> Proceedings of ICAIHC-2022 will be published by
-                  Smart Innovation, Systems and Technologies(SIST): Springer Book Series
+                <p style="text-align: justify;font-size: 18px;">Conference Proceedings of ICAIHC-2022 will be published in
+                  <a href="https://www.interscience.in/gret/">https://www.interscience.in/gret/</a> with ISSN No. 2320-6632. <br> The  full papers will be published in Smart Innovation, Systems and Technologies(SIST): <b>Springer Book Series</b>
                    <a href="https://www.springer.com/series/8767">(https://www.springer.com/series/8767)</a><br>
-                  <b>Indexing:</b> This series will be submitted for inclusion
-                  to the leading indexing services
+                  <b>Indexing:</b> This series is included in the leading indexing services
                   including ISI Proceedings, EI-Compendex, DBLP,
-                  SCOPUS, Google Scholar and Springer link.</p>  
+                  SCOPUS, Google Scholar and Springer link.<br>
+                Some of the papers related to Telemedicine and Clinical Practices will be published in <a href="https://www.inderscience.com/jhome.php?jcode=ijtmcp">https://www.inderscience.com/jhome.php?jcode=ijtmcp</a> 
+              with ISSN No. 2052-8442.</p>
+
 
                 <div class="row" >
                     <div class="col-md-4">
@@ -348,8 +355,8 @@ padding: 15px 2px;margin-left: 89px;" ><a href="./html/Special.html">SPECIAL SES
       <img
         src="./image/icon-2-2.png" class="rounded mx-auto d-block"
       />
-      <h4 style="text-align: center;padding-top: 10px;"><b>Transport</b></h4>
- <p style="text-align: center;">To be Updated soon..</p>
+      <!-- <h4 style="text-align: center;padding-top: 10px;"><b>Transport</b></h4>
+ <p style="text-align: center;">To be Updated soon..</p> -->
     </div>
   
     <div class="col-lg-4 mb-4 mb-lg-0">
@@ -411,6 +418,9 @@ padding: 15px 2px;margin-left: 89px;" ><a href="./html/Special.html">SPECIAL SES
         <!--/.Copyright-->
     
       </footer>
+
+
+
       <!--/.Footer-->
 </body>
 </html>
