--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ window.onscroll = function() {
 
 <button class="button" style="background-color:rgb(147, 242, 255);border: none;color: white;
 padding: 15px 2px;margin-left: 31px;" ><a href="">Young Profetional</a></button> -->
-<button type="button" class="btn btn-primary btn-lg" >Special Session</button>
+<button type="button" class="btn btn-primary btn-lg" ><a href="./html/Special.html">Special Session</a></button>
 <button type="button" class="btn btn-secondary btn-lg" style="background-color: azure;" ><a href="./html/young_profetional.html"> Young Profetional Session</a></button>
               </div>
               <!--Grid column-->
