--- a/index.html
+++ b/index.html
@@ -263,8 +263,8 @@ window.onscroll = function() {
 
 <button class="button" style="background-color:rgb(147, 242, 255);border: none;color: white;
 padding: 15px 2px;margin-left: 31px;" ><a href="">Young Profetional</a></button> -->
-<button type="button" class="btn btn-primary btn-lg" style="background-color: rgb(150, 236, 12);" ><a href="./html/Special.html">Special Session</a></button>
-<button type="button" class="btn btn-secondary btn-lg" style="background-color: azure;" ><a href="./html/young_profetional.html"> Young Profetional Session</a></button>
+<button type="button" class="btn btn-primary btn-lg" style="background-color: rgb(150, 236, 12);"><a href="./html/Special.html">Special Session</a></button>
+<button type="button" class="btn btn-secondary btn-lg" style="background-color: azure;" ><a href="./html/Student_PosterSymposium.html"> Young Profetional Session</a></button>
               </div>
               <!--Grid column-->
               <table class="table table-striped" style="margin-top: 50px;">
@@ -305,7 +305,7 @@ padding: 15px 2px;margin-left: 31px;" ><a href="">Young Profetional</a></button>
                 <h1 style="text-align: center;">PUBLICATION</h1>
                 <!-- Main heading -->
                 <p style="text-align: justify;font-size: 18px;">Conference Proceedings of ICAIHC-2022 will be published in
-                  <a href="https://www.interscience.in/gret/">https://www.interscience.in/gret/</a> with ISSN No. 2320-6632. <br> The  full papers will be published in Smart Innovation, Systems and Technologies(SIST): <b>Springer Book Series</b>
+                  <a href="https://www.interscience.in/gret/">https://www.interscience.in/gret/</a> with ISSN No. 2320-6632. <br> The  full papers will be published in Smart Innovation, Systems and Technologies(SIST):Springer Book Series
                    <a href="https://www.springer.com/series/8767">(https://www.springer.com/series/8767)</a><br>
                   <b>Indexing:</b> This series is included in the leading indexing services
                   including ISI Proceedings, EI-Compendex, DBLP,
