--- a/html/Student_PosterSymposium.html
+++ b/html/Student_PosterSymposium.html
@@ -151,7 +151,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-     <h3 style="color:brown; text-align: center;"><b>AboutICAIHC-2022</b></h3>
+     <h3 style="color:brown; text-align: center;"><b>About ICAIHC-2022</b></h3>
      <p style="text-align: justify;">The 1st International Conference on International 
         Conference on Ambient Intelligence in Health 
         Care (ICAIHC-2022) is an annual forum that will 
@@ -227,7 +227,7 @@ Jagmohan Nagar, Khandagiri, Bhubaneswar- 751030
         <div class="col-sm">
             <p style="color:red;text-align: center; font-size: 20px;"><b>Who canparticipate?</b></p>
             <p style="text-align: center;color: darkblue;"><b>All UG,PG and research students can submit the poster using the given link</b></p>
-            <button style="border-radius: 12px;margin-left: 150px;"> <a href="./contribution.html">CLICK</a></button>
+            <button style="border-radius: 12px;margin-left: 150px;">  <a href="../image/poster_template(ICAIHC_2022).pptx" download> CLICK</a></button>
         </div>
         <div class="col-sm">
             <p style="color:red;text-align: center; font-size: 20px;"><b>Publication</b></p>
