--- a/html/Student_PosterSymposium.html
+++ b/html/Student_PosterSymposium.html
@@ -142,7 +142,7 @@
 <div class="container">
     <h1 style="color:red;text-align: center;">
         <img src="../image/SOA-PNG.png" alt="SOA_logo" style="height: 120px;width: 120px;">
-       <b>International Conference on Ambient Intelligence in Health Care</b></h1>
+       <b>International Conference on Ambient Intelligence in Healthcare</b></h1>
        <h3 style="color:rgb(32, 219, 63);text-align:center">(ICAIHC-2022), April 15-16, 2022</h3>
        <h1 style="text-align: center;color: blue;">Student Poster Symposium</h1>
 
